app/javascript/src/styles/specific/posts.scss
@import "../base/000_vars.scss";

@keyframes heartbeat {
  0% {
    transform:scale(1);
  }
  50% {
    transform:scale(1.3);
  }
  100% {
    transform:scale(1);
  }
}

@keyframes sharpen {
  from {
    filter: blur(8px);
  }

  to {
    filter: none;
  }
}

article.post-preview {
  height: 154px;
  width: 154px;
  margin: 0 10px 10px 0;
  overflow: hidden;
  text-align: center;
  display: inline-block;
  position: relative;

  a {
    display: inline-block;
  }

  &.captioned {
    height: auto;
    vertical-align: text-top;
  }

  .desc {
   font-size: 80%;
   margin-bottom: 0;
  }

  img {
    margin: auto;
  }

  &[data-tags~=animated]:before, &[data-file-ext=swf]:before, &[data-file-ext=webm]:before, &[data-file-ext=mp4]:before, &[data-file-ext=zip]:before {
    @include animated-icon;
  }

  &[data-has-sound=true]:before {
    @include sound-icon;
  }
}

#saved-searches-nav {
  margin-top: 1em;
}

#excerpt p.links {
  margin-top: 1em;
}

#edit-dialog textarea {
  margin-bottom: 0.25em;
}

.post-preview {
  img {
    border: 2px solid transparent;
  }

  &.post-status-has-children img {
    border-color: var(--preview-has-children-color);
  }

  &.post-status-has-parent img {
    border-color: var(--preview-has-parent-color);
  }
  
  &.post-status-has-children.post-status-has-parent img {
    border-color: var(--preview-has-children-color) var(--preview-has-parent-color) var(--preview-has-parent-color) var(--preview-has-children-color);
  }


  &.post-status-deleted img {
    border-color: var(--preview-deleted-color);
  }

  &.post-status-has-children.post-status-deleted img {
    border-color: var(--preview-has-children-color) var(--preview-deleted-color) var(--preview-deleted-color) var(--preview-has-children-color);
  }

  &.post-status-has-parent.post-status-deleted img {
    border-color: var(--preview-has-parent-color) var(--preview-deleted-color) var(--preview-deleted-color) var(--preview-has-parent-color);
  }

  &.post-status-has-children.post-status-has-parent.post-status-deleted img {
    border-color: var(--preview-has-children-color) var(--preview-deleted-color) var(--preview-deleted-color) var(--preview-has-parent-color);
  }


  /* Pending and flagged posts have blue borders (except in the modqueue). */
  &.post-status-pending:not(.mod-queue-preview) img,
  &.post-status-flagged:not(.mod-queue-preview) img {
    border-color: var(--preview-pending-color);
  }

  &.post-status-has-children.post-status-pending:not(.mod-queue-preview) img,
  &.post-status-has-children.post-status-flagged:not(.mod-queue-preview) img {
    border-color: var(--preview-has-children-color) var(--preview-pending-color) var(--preview-pending-color) var(--preview-has-children-color);
  }

  &.post-status-has-parent.post-status-pending:not(.mod-queue-preview) img,
  &.post-status-has-parent.post-status-flagged:not(.mod-queue-preview) img {
    border-color: var(--preview-has-parent-color) var(--preview-pending-color) var(--preview-pending-color) var(--preview-has-parent-color);
  }

  &.post-status-has-children.post-status-has-parent.post-status-pending:not(.mod-queue-preview) img,
  &.post-status-has-children.post-status-has-parent.post-status-flagged:not(.mod-queue-preview) img {
    border-color: var(--preview-has-children-color) var(--preview-pending-color) var(--preview-pending-color) var(--preview-has-parent-color);
  }
}

/* Flagged posts have red borders for approvers. */
body[data-user-can-approve-posts="true"] .post-preview {
  &.post-status-flagged img {
    border-color: var(--preview-flagged-color);
  }

  &.post-status-has-children.post-status-flagged img {
    border-color: var(--preview-has-children-color) var(--preview-flagged-color) var(--preview-flagged-color) var(--preview-has-children-color);
  }

  &.post-status-has-parent.post-status-flagged img {
    border-color: var(--preview-has-parent-color) var(--preview-flagged-color) var(--preview-flagged-color) var(--preview-has-parent-color);
  }

  &.post-status-has-children.post-status-has-parent.post-status-flagged img {
    border-color: var(--preview-has-children-color) var(--preview-flagged-color) var(--preview-flagged-color) var(--preview-has-parent-color);
  }
}

.post-preview.current-post {
  background-color: var(--preview-current-post-background);
}

#has-parent-relationship-preview, #has-children-relationship-preview {
  overflow-x: auto;
  white-space: nowrap;
  
  article.post-preview {
    width: auto;
    border: none;
    margin: 0;
    padding: 5px 5px 10px;
  }
}

.post-count {
  color: var(--tag-count-color);
  margin-left: 0.2em;
}

.low-post-count {
  color: var(--low-post-count-color);
}

div#c-posts {
  .fav-buttons {
    font-size: 14pt;
    margin: 0.5em 0;

    i {
      margin-right: 0.1em;
    }

    button.ui-button {
      padding: 0.25em 0.75em;
    }
  }

  #remove-fav-button i.fa-heart {
    color: var(--remove-favorite-button);
  }

  #remove-fav-button.animate i {
    animation: heartbeat 0.4s ease;
  }

  .fav-buttons-true #add-fav-button {
    display: none;
  }

  .fav-buttons-false #remove-fav-button {
    display: none;
  }

  #ugoira-controls {
    div#seek-slider {
      margin-top: 0.5em;
      float: right;
      overflow: visible;
      background: var(--ugoira-seek-slider-background);

      .ui-progressbar-value {
        background: var(--ugoira-seek-slider-progressbar-background);
      }
    }

    #save-video-link {
      margin: 0.5em 0;
    }

    button {
      margin-top: 0.3em;
    }

    #ugoira-load-progress {
      display: inline;
      margin-left: 17px;
    }
  }

  .outer-recent-searches {
    overflow: hidden;
  }

  .post-notice {
    font-size: 0.8em;
    padding: 0.5em;
    margin-bottom: 0.5em;
    overflow: hidden;
    border: var(--post-notice-border);
    border-radius: 3px;

    .resolved {
      margin-left: 0.5em;
      font-weight: bold;
    }

    &.post-notice-parent { background: var(--post-parent-notice-background); }
    &.post-notice-child { background: var(--post-child-notice-background); }
    &.post-notice-pending { background: var(--post-pending-notice-background); }
    &.post-notice-flagged { background: var(--post-flagged-notice-background); }
    &.post-notice-banned { background: var(--post-banned-notice-background); }
    &.post-notice-deleted { background: var(--post-deleted-notice-background); }
    &.post-notice-appealed { background: var(--post-appealed-notice-background); }
    &.post-notice-resized { background: var(--post-resized-notice-background); }
    &.post-notice-search { background: var(--post-search-notice-background); font-size: 1em; }
  }

  aside#sidebar #tag-list h2 {
    font-size: $h4_size;
  }

  aside#sidebar > section > ul {
    margin-bottom: 1em;
  }

  aside#sidebar > section > ul li {
    list-style-type: none;
  }

  aside#sidebar > section > ul ul li {
    margin-left: 1em;
  }

  div#a-index {
    menu#post-sections {
      margin-bottom: 0.5em;
      font-size: $h3_size;

      li {
        padding: 0 1em 0.5em 0;

        &.active {
          font-weight: bold;
        }
      }
    }
  }

  div#a-show {
    .active, .pool-selected-true {
      font-weight: bold;
    }

    .recommended-posts {
      margin-top: 1em;
    }

    menu#post-sections {
      margin: 0;
      font-size: $h3_size;

      li {
        padding: 0 1em 0 0;
      }

      div.share a {
        margin: 0;
      }
    }

    div.notices {
      margin: 1em 0;
    }

    section {
      margin-top: 1em;
    }

    span.quick-mod {
      float: right;
    }

    .pool-name, .search-name {
      word-wrap: break-word;
    }

    textarea {
      margin-bottom: 0.25em;
    }

    #edit textarea {
      width: 100%;
    }

    #favlist {
      margin-left: 1em;
      word-wrap: break-word;
    }

    #search-seq-nav + #pool-nav, #search-seq-nav + #favgroup-nav, #pool-nav + #favgroup-nav {
      margin-top: 0.5em;
    }

    #pool-nav, #search-seq-nav, #favgroup-nav {
      li {
        position: relative;
        text-align: center;
        padding: 0 5.5em;

        .prev {
          position: absolute;
          left: 2em;
          top: 0;
        }

        .next {
          position: absolute;
          right: 2em;
          top: 0;
        }

        .first {
          position: absolute;
          left: 0.5em;
          top: 0;
        }

        .last {
          position: absolute;
          right: 0.5em;
          top: 0;
        }
      }
    }

    span.close-button {
      position: absolute;
      top: 5px;
      right: 5px;
      cursor: pointer;
    }
    
    div.comments-for-post {
      width:100%
    }

    #artist-commentary {
      border: var(--post-artist-commentary-container-border);
      border-radius: 8px;
      background: var(--post-artist-commentary-container-background);
      margin-top: 1em;
      padding: 0.5em;

      #original-artist-commentary, #translated-artist-commentary {
        max-height: 20em;
        overflow-y: auto;
      }
    }
  }

  div#quick-edit-div {
    textarea {
      width: 70%;
      height: 4em;
      display: block;
    }
  }
}

div#c-post-versions, div#c-artist-versions {
  div#a-index {
    a {
      word-wrap: break-word
    }
  }
}

div#c-posts, div#c-uploads {
  /* Fetch source data box */
  div#source-info {
    border-radius: 4px;
    margin: 1em 0;
    padding: 1em;
    border: var(--fetch-source-data-border);

    &:not(.loading) #source-info-loading { display: none; }
    &.loading #source-info-content { display: none; }
    &.loading #fetch-data-manual { display: none; }

    ul {
      display: inline-block;
    }

    dt, dd, li {
      display: inline;
    }

    dt, #source-info-tags li {
      margin-right: 1em;
    }
  }
}

div#c-explore-posts {
  a.desc {
    font-weight: bold;
    margin: 0 0.5em;
  }

  #popular-nav-links {
    text-align: center;
  }

  .period {
    margin: 0 5em;

    &:first-child {
      margin-left: 0;
    }
  }
}

div#unapprove-dialog {
  p {
    margin-bottom: 1em;
  }
}

textarea[data-autocomplete="tag-edit"] {
  font-family: monospace;
}

#add-commentary-dialog {
  input {
    width: 70%;
  }

  input[type=checkbox] {
    width: auto;
  }

  textarea {
    font-size: 1em;
    width: 100%;
  }
}

